--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -17,8 +17,7 @@
                 <span></span>
             </div>
             <div class="logo">
-                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_mila2.png"
-                        alt="Logo Mila"></a>
+                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_mila2.png" alt="Logo Mila"></a>
             </div>
             <div class="menu">
                 <ul>
@@ -54,7 +53,7 @@
                 <H1>assistante virtuelle<br>mila</H1>
                 <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par
                     la <span>technologie
-                    holographique</span></p>
+                        holographique</span></p>
                 <a href="#innovation">Découvrir</a>
             </div>
         </div>
@@ -205,7 +204,7 @@
 
         <div class="content">
             <div class="container">
-                 <div class="mycard" id="card">
+                <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -219,7 +218,8 @@
                     <div class="slide slide2">
                         <div class="content">
                             <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
-                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants
+                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet,
+                                correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants
                                 partenaires</p>
                             <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
                         </div>
@@ -241,15 +241,13 @@
                         <div class="content">
                             <p>- Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
                             <p>- Elle guide les clients, répond à leurs questions, recommande les meilleures
-                                attractions, met en
-                                avant les événements spéciaux, et bien plus encore !</p>
+                                attractions, met en avant les événements spéciaux, et bien plus encore !</p>
                             <p>- Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante,
-                                unique et
-                                mémorable !</p>
+                                unique et mémorable !</p>
                         </div>
                     </div>
-                </div> 
-                 <div class="mycard" id="card">
+                </div>
+                <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -265,23 +263,20 @@
                         <div class="content">
                             <p>- Mila enrichit l'expérience de visite dans les musées</p>
                             <p>- Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en
-                                avant les
-                                expositions et événements, et bien plus encore !</p>
+                                avant les expositions et événements, et bien plus encore !</p>
                             <p>- Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante,
-                                unique et
-                                mémorable !</p>
+                                unique et mémorable !</p>
                         </div>
                     </div>
-                </div> 
+                </div>
                 <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
                                 <p>Galeries Marchandes</p>
                             </div>
-
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                                <video autoplay loop muted src="./assets/vid/centres.webm"></video>
                             </div>
                         </div>
                     </div>
@@ -289,11 +284,9 @@
                         <div class="content">
                             <p>- Mila transforme l'expérience de visite dans vos centres commerciaux</p>
                             <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
-                                questions, leurs
-                                proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
                             <p>- Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et
-                                renforcer
-                                leur fidélité</p>
+                                renforcer leur fidélité</p>
                         </div>
                     </div>
                 </div>
@@ -303,7 +296,6 @@
                             <div class="titre">
                                 <p>Points de vente</p>
                             </div>
-
                             <div class="icon">
                                 <video autoplay loop muted src="./assets/vid/pdv.webm"></video>
                             </div>
@@ -313,8 +305,7 @@
                         <div class="content">
                             <p>- Mila révolutionne l'expérience d’achat dans vos points de vente</p>
                             <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
-                                questions, leurs
-                                proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
                             <p>- Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser
                             </p>
                         </div>
@@ -345,11 +336,9 @@
                     <div class="desc">
                         <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
                         <p>Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met
-                            en
-                            avant les événements spéciaux, et bien plus encore !</p>
+                            en avant les événements spéciaux, et bien plus encore !</p>
                         <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique
-                            et
-                            mémorable !</p>
+                            et mémorable !</p>
                     </div>
                 </article>
                 <article class="card" id="card">
@@ -361,11 +350,9 @@
                     <div class="desc">
                         <p>Mila enrichit l'expérience de visite dans les musées</p>
                         <p>Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant
-                            les
-                            expositions et événements, et bien plus encore !</p>
+                            les expositions et événements, et bien plus encore !</p>
                         <p>Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique
-                            et
-                            mémorable !</p>
+                            et mémorable !</p>
                     </div>
                 </article>
                 <article class="card" id="card">
@@ -373,17 +360,14 @@
                         <p>Galeries Marchandes</p>
                     </div>
                     <div class="image">
-                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
-
+                        <video loop autoplay muted src="./assets/vid/centres.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
                         <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions,
-                            leurs
-                            proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                            leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
                         <p>Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et
-                            renforcer
-                            leur fidélité</p>
+                            renforcer leur fidélité</p>
                     </div>
                 </article>
                 <article class="card" id="card">
@@ -399,8 +383,7 @@
                     <div class="desc">
                         <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
                         <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions,
-                            leurs
-                            proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                            leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
                         <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
                     </div>
                 </article>
