--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -29,6 +29,11 @@
             </div>
         </div>
 
+        <div class="reserve">
+            <a href="#contact">Réserver <br> une démo</a>
+            
+        </div>
+
         <div class="main">
             <div class="left">
                 <div class="topline">
@@ -50,7 +55,7 @@
                 </div>
             </div>
             <div class="right">
-                <H1>assistante virtuelle<br>mila</H1>
+                <H1>assistante virtuelle mila</H1>
                 <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par
                     la <span>technologie
                         holographique</span></p>
@@ -114,6 +119,13 @@
     </section>
 
     <section class="target" id="marchés">
+        <div class="ellipse">
+            <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            </svg>
+        </div>
         <div class="topline">
             <div class="gauche" data-aos="fade-right" data-aos-duration="2000">
                 <div>
@@ -394,6 +406,13 @@
     </section>
 
     <section class="fonctions" id="fonctionnalités" data-aos="fade-up" data-aos-duration="2000">
+        <div class="ellipse">
+            <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            </svg>
+        </div>
         <div class="content">
             <div class="left">
                 <div class="title">
@@ -454,6 +473,13 @@
     </section>
 
     <section class="video">
+        <div class="ellipse">
+            <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+            </svg>
+        </div>
         <div class="content">
             <div class="txt">
                 <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
