--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -223,7 +223,7 @@
                                 <p>Transport</p>
                             </div>
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                                <video autoplay loop muted src="./assets/vid/transport.webm"></video>
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                         <p>Transport</p>
                     </div>
                     <div class="image">
-                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
+                        <video loop autoplay muted src="./assets/vid/transport.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
@@ -388,7 +388,7 @@
                     </div>
                     <div class="image">
                         <video loop autoplay muted playsinline>
-                            <source src="./assets/vid/pdv1.webm" type="video/webm">
+                            <source src="./assets/vid/pdv.webm" type="video/webm">
                             <img src="./assets/vid/pdv.gif" alt="mila points de vente">
                         </video>
                     </div>
