test mobile card

--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -31,7 +31,7 @@
 
         <div class="reserve">
             <a href="#contact">Réserver <br> une démo</a>
-            
+
         </div>
 
         <div class="main">
@@ -121,9 +121,11 @@
     <section class="target" id="marchés">
         <div class="ellipse">
             <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z"
+                    stroke="#181818" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
             </svg>
         </div>
         <div class="topline">
@@ -296,7 +298,8 @@
                         <div class="content">
                             <p>- Mila transforme l'expérience de visite dans vos centres commerciaux</p>
                             <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
-                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore
+                                !</p>
                             <p>- Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et
                                 renforcer leur fidélité</p>
                         </div>
@@ -317,12 +320,34 @@
                         <div class="content">
                             <p>- Mila révolutionne l'expérience d’achat dans vos points de vente</p>
                             <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
-                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                                questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore
+                                !</p>
                             <p>- Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser
                             </p>
                         </div>
                     </div>
                 </div>
+
+                <div class="mycard" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>test</p>
+                            </div>
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/transport.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
+                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
+                            <p>- Mila sera votre atout incontournable pour renforcer la relation avec vos clients !</p>
+                        </div>
+                    </div>
+                </div>
+
 
                 <article class="card" id="card">
                     <div class="titre">
@@ -401,16 +426,16 @@
                 </article>
             </div>
         </div>
-
-
     </section>
 
     <section class="fonctions" id="fonctionnalités" data-aos="fade-up" data-aos-duration="2000">
         <div class="ellipse">
             <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z"
+                    stroke="#181818" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
             </svg>
         </div>
         <div class="content">
@@ -475,9 +500,11 @@
     <section class="video">
         <div class="ellipse">
             <svg width="194" height="379" viewBox="0 0 194 379" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z" stroke="#181818"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
-            <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M404.654 101.752C205.985 13.496 26.8011 -17.237 4.43506 33.11C-17.9309 83.456 124.991 195.816 323.66 284.072C522.329 372.328 701.513 403.06 723.879 352.714C746.244 302.368 603.323 190.008 404.654 101.752Z"
+                    stroke="#181818" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
+                <ellipse cx="8.5" cy="9" rx="8.5" ry="9" transform="matrix(-1 0 0 1 57 0)" fill="#D6BB73" />
             </svg>
         </div>
         <div class="content">
@@ -494,7 +521,6 @@
                         </clipPath>
                     </defs>
                 </svg>
-
                 <p>Ready to <br>get started</p>
             </div>
             <div class="txt">
@@ -575,7 +601,6 @@
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="credit">
@@ -610,6 +635,33 @@
         });
 
         AOS.init();
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const cards = document.querySelectorAll('.mycard');
+
+            // Intersection Observer pour détecter quand une carte est visible
+            const observerOptions = {
+                root: null, // Utilise le viewport
+                rootMargin: '0px',
+                threshold: 0.5 // 50% de l'élément doit être visible
+            };
+
+            const observerCallback = (entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('active');
+                    } else {
+                        entry.target.classList.remove('active');
+                    }
+                });
+            };
+
+            const observer = new IntersectionObserver(observerCallback, observerOptions);
+
+            cards.forEach(card => {
+                observer.observe(card);
+            });
+        });
     </script>
 </body>
 
