--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -662,6 +662,19 @@
                 observer.observe(card);
             });
         });
+
+        const images = [
+        '../assets/img/mila_trainhover.jpg',
+        '../assets/img/casinohover.jpg',
+        '../assets/img/museehov.jpg',
+        '../assets/img/mila_centreshover2.jpg',
+        '../assets/img/pdvhover.jpg'
+    ];
+
+    images.forEach((image) => {
+        const img = new Image();
+        img.src = image;
+    });
     </script>
 </body>
 
