--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -267,9 +267,8 @@
                             <div class="titre">
                                 <p>Musées</p>
                             </div>
-
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                                <video autoplay loop muted src="./assets/vid/musees.webm"></video>
                             </div>
                         </div>
                     </div>
@@ -361,7 +360,7 @@
                     <div class="titre">
                         <p>Musées</p>
                     </div>
-                    <div class="image"> <video loop autoplay muted src="./assets/vid/illust.webm"></video>
+                    <div class="image"> <video autoplay loop muted src="./assets/vid/musees.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila enrichit l'expérience de visite dans les musées</p>
