--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -225,7 +225,7 @@
                                 <p>Transport</p>
                             </div>
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/transport.webm"></video>
+                                <img src="./assets/vid/transport.gif" alt="">
                             </div>
                         </div>
                     </div>
@@ -268,8 +268,7 @@
                                 <p>Musées</p>
                             </div>
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/musees.webm"></video>
-                            </div>
+                            <img src="./assets/vid/musees.gif" alt="">                            </div>
                         </div>
                     </div>
                     <div class="slide slide2">
@@ -289,7 +288,7 @@
                                 <p>Galeries Marchandes</p>
                             </div>
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/centres.webm"></video>
+                                <img src="./assets/vid/centres.gif" alt="">
                             </div>
                         </div>
                     </div>
@@ -311,7 +310,7 @@
                                 <p>Points de vente</p>
                             </div>
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/pdv.webm"></video>
+                                 <img src="./assets/vid/pdv.gif" alt="">
                             </div>
                         </div>
                     </div>
