update gifs and casino

--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -247,8 +247,7 @@
                             </div>
 
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/casino.webm"></video>
-                            </div>
+                            <img src="./assets/vid/casino.gif" alt="">                            </div>
                         </div>
                     </div>
                     <div class="slide slide2">
