--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id='stars2'></div>
     <div id='stars3'></div>
     <div id='title'>
-        <span>Lty</span>
+        <span>Welcome home, Chise.</span>
     <br>
-    <span>Repo</span>
+    <span>Lty Repo</span>
     </div>
 </body>
 </html>
