--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -3,14 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Mila - Assistante virtuelle 3D">
+    <meta property="og:description" content="Découvrez Mila, une assistante virtuelle 3D animée par la technologie holographique.">
+    <meta property="og:image" content="https://www.mila3d.com/assets/img/ogfb.jpg">
+    <meta property="og:url" content="URL de votre site">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Mila - Assistante virtuelle">
+    <meta property="og:locale" content="fr_FR">
+    <meta name="description" content="Découvrez Mila, une assistante virtuelle 3D animée par la technologie holographique.">
+    <meta name="keywords" content="Mila, intelligence artificelle, Assistante virtuelle, 3D">
+    <meta name="author" content="Luxant Innovation">
+    <meta name="robots" content="index, follow">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mila - Assistante virtuelle">
+    <meta name="twitter:description" content="Découvrez Mila, une assistante virtuelle 3D animée par la technologie holographique.">
+    <meta name="twitter:image" content="https://www.mila3d.com/assets/img/ogfb.jpg">
+    <meta name="twitter:site" content="@luxantinnovation">
+    <meta name="twitter:creator" content="@luxantinnovation">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/img/favicon.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mila - Assistante Virtuelle</title>
 </head>
 
 <body>
+
     <header id="home">
         <div class="nav">
             <div class="burger">
@@ -517,6 +536,7 @@
         </div>
 
     </footer>
+    <script src="./js/cursor.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -600,7 +620,7 @@
         });
 
         const images = [
-            '../assets/img/mila_trainhover.jpg',
+            '../assets/img/mila_trainhover2.jpg',
             '../assets/img/casinohover.jpg',
             '../assets/img/museehov.jpg',
             '../assets/img/mila_centreshover2.jpg',
