--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -217,7 +217,7 @@
                                 <p>Musées</p>
                             </div>
                             <div class="icon">
-                                <img src="./assets/vid/musees.gif" alt="">
+                                <img src="./assets/vid/musee2.gif" alt="">
                             </div>
                         </div>
                     </div>
@@ -309,7 +309,7 @@
                     <div class="titre">
                         <p>Musées</p>
                     </div>
-                    <div class="image"> <video autoplay loop muted src="./assets/vid/musees.webm"></video>
+                    <div class="image"> <video autoplay loop muted src="./assets/vid/musee2.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila enrichit l'expérience de visite dans les musées</p>
