--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -30,6 +30,7 @@
 
 <body>
     <div class="loader" id="loader">
+        <img src="./assets/vid/animation logo.gif" alt="loader">
         <video src="./assets/vid/animation_logo.webm" autoplay loop muted></video>    </div>
     <header id="home">
         <div class="nav">
