--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -310,7 +310,7 @@
                     <div class="titre">
                         <p>Musées</p>
                     </div>
-                    <div class="image"> <video autoplay loop muted src="./assets/vid/musee.webm"></video>
+                    <div class="image"> <video autoplay loop muted src="./assets/vid/musee2.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila enrichit l'expérience de visite dans les musées</p>
