--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -279,7 +279,7 @@
 
                 <article class="card" id="card">
                     <div class="titre">
-                        <p>Transport</p>
+                        <p>Transports</p>
                     </div>
                     <div class="image">
                         <video loop autoplay muted src="./assets/vid/transport.webm"></video>
